fix mavbar so it is visible!

--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -89,6 +89,7 @@ img::-moz-selection {
 
 #mainNav {
   position: absolute;
+  z-index: 1;
   border-bottom: 1px solid #e9ecef;
   background-color: white;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
